<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context="com.example.shaloin.secondassignmentb.MainActivity">

    <LinearLayout
        android:id="@+id/firstID"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:weightSum="4"
        android:orientation="horizontal">
        <TextView
            android:text="@string/card_balance"
            android:textSize="18sp"
            android:layout_weight="2.7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:ems="3"
            android:layout_weight="1.5"
            android:background="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/secondID"
        android:layout_below="@+id/firstID"
        android:layout_marginTop="20dp"
        android:weightSum="4"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/yearly_interest"
            android:textSize="18sp"
            android:layout_weight="0.83"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:ems="3"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/thirdID"
        android:layout_below="@+id/secondID"
        android:layout_marginTop="20dp"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/minimum_payment"
            android:textSize="18sp"
            android:layout_weight="1.6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:ems="3"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/fourthID"
        android:layout_below="@+id/thirdID"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="5"
        android:layout_width="340dp"
        android:layout_height="40dp">
        <TextView
            android:text="@string/final_card_balance"
            android:textSize="18sp"
            android:layout_weight="3.73"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:ems="3"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/fifthID"
        android:layout_below="@+id/fourthID"
        android:weightSum="5"
        android:layout_marginTop="20dp"
        android:layout_width="340dp"
        android:layout_height="40dp">
        <TextView
            android:text="@string/months"
            android:textSize="18sp"
            android:layout_weight="3.7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:ems="3"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/sixthID"
        android:layout_below="@+id/fifthID"
        android:layout_marginTop="20dp"
        android:weightSum="5"
        android:layout_width="340dp"
        android:layout_height="40dp">
        <TextView
            android:text="@string/interest_paid"
            android:textSize="18sp"
            android:layout_weight="3.17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:ems="3"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"/>
    </LinearLayout>
    <Button
        android:id="@+id/bcomputeID"
        android:text="COMPUTE"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/sixthID"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <Button
        android:layout_below="@id/bcomputeID"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:text="CLEAR"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

</RelativeLayout>
